# hh_parser

./: .gitignore  README.md  pyproject.toml
src/: api.py  area_selector.py  constants.py  db_manager.py  employer.py  functions.py  main.py  models.py  parser.py  queries.sql  vacancy.py
tests/: test_api.py
